--- a/.htaccess
+++ b/.htaccess
@@ -3,9 +3,9 @@ RewriteEngine On
 RewriteOptions inherit
 Options +FollowSymlinks
 Options -Multiviews
-RewriteBase /ltdish/studio/
-ErrorDocument 404 /index.php?page=error&set=404
-ErrorDocument 500 /index.php?page=error&set=500
+
+ErrorDocument 404 /index.php?RS_page=error&RS_set=404
+ErrorDocument 500 /index.php?RS_page=error&RS_set=500
 
 RewriteRule ^([a-z]{2,2})$ index.php?RS_language=$1
 RewriteRule ^([a-z]{2,2})/$ index.php?RS_language=$1
@@ -13,8 +13,6 @@ RewriteRule ^([a-z]{2,2})/([a-zA-Z0-9+_-]{2,})$ index.php?RS_language=$1&RS_page
 RewriteRule ^([a-z]{2,2})/([a-zA-Z0-9+_-]{2,})/$ index.php?RS_language=$1&RS_page=$2
 RewriteRule ^([a-z]{2,2})/([a-zA-Z0-9+_-]{2,})/([a-zA-Z0-9/\+_-]+)$ index.php?RS_language=$1&RS_page=$2&RS_set=$3
 RewriteRule ^([a-z]{2,2})/([a-zA-Z0-9+_-]{2,})/([a-zA-Z0-9/\+_-]+)/$ index.php?RS_language=$1&RS_page=$2&RS_set=$3
-
-RewriteRule ^javascript.js$ javascript.php
 </ifModule>
 
 <files .htaccess>
